--- a/scss/header.scss
+++ b/scss/header.scss
@@ -307,6 +307,7 @@ header{
   .lSSlideOuter .lSGallery li, .lSSlideOuter .lightSlider>*{
     img{
       width: 100%;
+      min-height: 840px;
     }
   }
   .lSSlideOuter .lSPager.lSpg{
@@ -332,3 +333,195 @@ header{
     border: 1px solid #a89d8e;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.toggle_mnu {
+  width: 60px;
+  height: 60px;
+  position: relative;
+  background-color: transparent;
+  z-index: 100;
+  border: none;
+  margin: 0 auto;
+}
+.toggle_mnu span {
+  display: block; }
+
+.sandwich {
+  width: 30px;
+  height: 28px;
+  position: absolute;
+  top: 8px;
+  bottom: 0;
+  left: 0px;
+  right: 0;
+  margin: auto;
+  z-index: 200; }
+
+.sw-topper {
+  position: relative;
+  top: 4px;
+  width: 30px;
+  height: 4px;
+  background: #fff;
+  border: none;
+  -webkit-transition: -webkit-transform 0.5s, top 0.2s;
+  transition: transform 0.5s, top 0.2s;
+  display: block; }
+
+
+.sw-bottom {
+  position: relative;
+  width: 30px;
+  height: 4px;
+  top: 6.6px;
+  background: #fff;
+  border: none;
+  -webkit-transition: -webkit-transform 0.5s, top 0.2s;
+  transition: transform 0.5s, top 0.2s;
+  -webkit-transition-delay: 0.2s, 0s;
+  transition-delay: 0.2s, 0s; }
+
+.sw-footer {
+  position: relative;
+  width: 30px;
+  height: 4px;
+  top: 10px;
+  background: #fff;
+  border: none;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s; }
+
+.sandwich.active{
+  position: fixed;
+  top: 0;
+  left: 0px;
+}
+.sandwich.active .sw-topper {
+  width: 25px;
+  height: 5px;
+  background-color: #e8cda7;
+  top: -50px;
+  left: 100px;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
+.sandwich.active .sw-bottom {
+  width: 25px;
+  height: 5px;
+  background-color: #e8cda7;
+  top: -55px;
+  left: 100px;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg); }
+.sandwich.active .sw-footer {
+  opacity: 0;
+  top: 0;
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg); }
+
+.top_mnu {
+  position: fixed;
+  width:100%;
+  background-color: rgba(0,0,0,0.6);
+  z-index: 70;
+  height: 100%;
+  left: 0;
+  color: #e8cda7;
+  top: 0px;
+  display: none; }
+.top_mnu ul,
+.top_mnu li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  padding-top: 5px;
+
+}
+.top_mnu ul {
+  margin-top: 50px;
+  text-align: left;
+  padding: 20px 0;
+  -webkit-animation-duration: 0.01s;
+  animation-duration: 0.01s; }
+.top_mnu ul li:nth-child(1) a {
+  -webkit-animation-delay: 0;
+  animation-delay: 0; }
+.top_mnu ul li:nth-child(2) a {
+  -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s; }
+.top_mnu ul li:nth-child(3) a {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s; }
+.top_mnu ul li:nth-child(4) a {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s; }
+.top_mnu ul a {
+  color: #e8cda7;
+  display: block;
+  font-size: 24px;
+  position: relative;
+  margin: 10px 0;
+  height: 26px;
+  text-align: center;
+  outline: none;
+  &:hover{
+    color: darken(#e8cda7,10);
+    text-decoration: none;
+  }
+  &:focus{
+    text-decoration: none;
+  }
+}
+.top_mnu ul a span {
+  display: block;
+  position: relative;
+  top: -40px;
+  left: 0;
+  height: 100%;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease; }
+.top_mnu ul a span:hover {
+  background-color: rgba(255, 255, 255, 0.08); }
+
+
+.top_mnu{
+  input{
+    max-width: 400px;
+    width: 86%;
+    padding: 21px 0 21px 54px;
+    border-bottom: 1px solid #e8e8e8;
+    position: relative;
+  }
+}
+
+
+
