--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -78,7 +78,87 @@
       margin-left: -20px;
     }
   }
+  footer{
+    background-position: 900px center;
+  }
 }
+@media only screen and (max-width : 1222px){
+  .next-brends
+  ul{
+    li{
+      margin: 14.5px 10px;
+      &:nth-child(4n+1){
+        margin-left: 10px;
+      }
+    }
+  }
+}
+
+
+
+
+@media only screen and (max-width : 1213px){
+  .working-offers ul li{
+    margin: 15px 17.5px;
+    &:nth-child(3n){
+      &:after{
+        display: none;
+      }
+    }
+  }
+}
+
+
+
+@media only screen and (max-width : 1211px){
+  .all-brends{
+    padding: 0 58px;
+  }
+  .next-brends
+  ul{
+    li{
+      margin: 14.5px 3.5px;
+      &:nth-child(4n+1){
+        margin-left: 10px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width : 1208px){
+  .all-first-item{
+    float: none;
+    display: block;
+    margin:  0 auto;
+  }
+
+  .next-brends ul{
+    text-align: center;
+    li{
+      margin: 14.5px 10px;
+      float: none;
+      display: inline-block;
+      &:nth-child(4n){
+        margin: 14.5px 10px;
+      }
+      &:nth-child(4n+1){
+        margin: 14.5px 10px;
+      }
+    }
+  }
+  footer{
+    background-position: 800px center;
+  }
+}
+
+
+@media only screen and (max-width : 1202px){
+  .forma-for-dicsount .red-line-k ul li p{
+    font-size: 1.5vw;
+  }
+}
+
+
 
 
 @media only screen and (max-width : 1195px){
@@ -97,11 +177,34 @@
   }
 }
 
+
+@media only screen and (max-width : 1148px){
+  .g-item{
+    ul{
+      li{
+        float: none;
+        display: inline-block;
+      }
+    }
+  }
+  footer{
+    background-position: 700px center;
+  }
+}
+
+
 @media only screen and (max-width : 1145px){
   .head-menu{
     margin-left: -25px;
   }
 }
+@media only screen and (max-width : 1127px){
+  .service ul li{
+    padding: 0 40px;
+  }
+}
+
+
 
 
 @media only screen and (max-width : 1110px){
@@ -112,6 +215,9 @@
     .call-back{
       margin-left: -60px;
     }
+  }
+  .forma-x input{
+    margin: 15px;
   }
 }
 
@@ -134,7 +240,14 @@
   }
 }
 
-
+@media only screen and (max-width : 1047px){
+  .service ul li{
+    padding: 0 20px;
+  }
+  .forma-for-dicsount .forma .stock{
+    background-position: 50px center;
+  }
+}
 
 
 @media only screen and (max-width : 1000px){
@@ -150,6 +263,24 @@
     }
   }
 }
+
+
+
+@media only screen and (max-width : 967px){
+  .service ul {
+    text-align: center;
+    li{
+      float: none;
+      display: inline-block;
+      margin: 15px 0;
+      &:first-child{
+        border-right: none;
+      }
+    }
+
+  }
+}
+
 
 
 @media only screen and (max-width : 991px){
@@ -170,21 +301,371 @@
   .sandwich.active .sw-bottom{
     top: -55px;
   }
+  .why{
+    background-image: none;
+  }
+  .right-why{
+    text-align: center;
+  }
+  .right-why .right-items li{
+    &:nth-child(2n){
+      margin: 32px 15px;
+    }
+  }
+  .forma-for-dicsount .forma form{
+    padding: 24px 30px;
+  }
+  footer{
+    background-image: none;
+    text-align: center;
+    .belt{
+      display: block;
+    }
+    .lic{
+      display: inline-block;
+      text-align: center;
+      float: none;
+    }
+    .call-back{
+      margin: 25px 0;
+      text-align: center;
+      display: block;
+      float: none;
+      a{
+        text-align: center;
+      }
+    }
+  }
 }
+
+
+@media only screen and (max-width : 945px){
+  .forma-for-dicsount .red-line-k ul li{
+    width: 100%;
+    .img-red-line{
+      padding-top: 25px;
+    }
+    p{
+      font-size: 2vw;
+    }
+  }
+}
+
+
+
+@media only screen and (max-width : 916px){
+  .working-offers ul li{
+    &:nth-child(3n){
+      &:after{
+        display: block;
+      }
+    }
+    &:nth-child(2n){
+      &:after{
+        display: none;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width : 880px){
+  .forma-for-dicsount {
+    .forma{
+      width: 100%;
+      .stock{
+        background-position: 30% center;
+      }
+    }
+    .img-discount{
+      width: 100%;
+    }
+
+  }
+}
+
+@media only screen and (max-width : 861px){
+  .brends{
+    margin-top: 25px;
+    a{
+      margin-top: 10px;
+    }
+  }
+}
+
+@media only screen and (max-width : 850px){
+  .banner {
+    h1{
+      font-size: 5.5vw;
+    }
+    h2{
+      font-size: 4vw;
+    }
+
+  }
+}
+
+
+
+
+@media only screen and (max-width : 822px){
+  .banner p{
+    font-size: 2.3vw;
+  }
+}
+
+
+
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px) {
+@media only screen and (max-width : 767px) {
+  .mobile-ver-sl{
+    display: block;
+    .top-sl-mobile{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      .banner li{
+        padding-left: 0;
+        display: block;
+        p{
+          display: inline-block;
+          position: relative;
+          &:after{
+            left: -25px;
+          }
+        }
+      }
+      .brends{
+        text-align: center;
+        ul{
+          display: inline-block;
+          li{
+            float: none;
+            display: inline-block;
+            &:nth-child(3n){
+              margin: 22px 10px;
+            }
+            &:nth-child(3n+1){
+              margin: 22px 10px;
+            }
+          }
+        }
+      }
+    }
+  }
+  .top-slide-form{
+    .inner{
+      display: none;
+    }
+  }
+  .right-top-forma{
+    text-align: center;
+  }
+  .forma-for-dicsount .red-line-k ul li p{
+    font-size:3.5vw;
+  }
 
 }
 
+
+@media only screen and (max-width : 679px){
+  .right-why .right-items {
+      text-align: center;
+      li{
+        float: none;
+        display: inline-block;
+      }
+  }
+}
+
+
+@media only screen and (max-width : 649px){
+  .all-reviews ul li .foto-client{
+    float: none;
+    max-width: inherit;
+    text-align: center;
+    img{
+      height: 350px;
+    }
+  }
+  .all-reviews ul li .otz-text{
+    float: none;
+    background-color: #f6e5ce;
+  }
+  .slider-reviews{
+    .lSSlideOuter .lSPager, .lSSlideOuter .lightSlider{
+      height: 100% !important;
+    }
+  }
+}
+
+
+@media only screen and (max-width : 619px){
+  .working-offers ul li{
+    &:after{
+      display: none;
+    }
+    &:nth-child(3n){
+      &:after{
+        display: none;
+      }
+    }
+  }
+  .forma-for-dicsount .forma .stock{
+    background-image: none;
+    padding: 30px 0;
+    text-align: center;
+    p{
+      padding: 0;
+    }
+  }
+  .all-brends{
+    padding: 0;
+  }
+}
+
+@media only screen and (max-width : 600px){
+  .mobile-ver-sl .top-sl-mobile .banner li p{
+    font-size: 3.5vw;
+  }
+  .banner{
+    h1{
+      font-size: 6vw;
+    }
+    h2{
+      font-size: 5vw;
+    }
+  }
+}
+
+
+
+
+@media only screen and (max-width : 550px){
+  .forma-for-dicsount{
+    padding: 25px;
+  }
+  .forma-for-dicsount .forma .stock{
+    background-position: 10% center;
+  }
+  .forma-for-dicsount .forma{
+    min-width: 300px;
+  }
+  .forma-for-dicsount .red-line-k ul li p{
+    font-size: 3.3vw;
+  }
+}
+
+
+
+
 /* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px) {
-	.pad{
-		padding: 20px 5px !important;
-	}
-	// 100% ширина окна
-	// .fancybox-wrap{
-	// 	width: 100% !important;
-	// 	left: 0 !important;
-	// }
+@media only screen and (max-width : 500px) {
+  .service ul li .img-service{
+    float: none;
+    text-align: center;
+  }
+  footer{
+    .belt{
+      img{
+        width: 100%;
+      }
+    }
+  }
+}
+
+
+@media only screen and (max-width : 470px){
+  .all-items-for ul li{
+    margin: 40px 15px;
+  }
+  .arrows-slider{
+    top: 52.1%;
+  }
+}
+
+@media only screen and (max-width : 450px){
+  .all-reviews{
+    padding: 0;
+  }
+  .mobile-ver-sl .top-sl-mobile .banner li p{
+    font-size:4.5vw;
+  }
+  .forma-for-dicsount .red-line-k ul li p{
+    font-size: 5vw;
+  }
+}
+
+@media only screen and (max-width : 420px){
+  .arrows-slider{
+    top: 51.9%;
+  }
+  .buy-items-slide{
+    padding: 0;
+  }
+  .next-brends ul li{
+    margin: 15px 0;
+    &:nth-child(4n){
+      margin: 15px 0;
+    }
+    &:nth-child(4n+1){
+      margin: 15px 0;
+    }
+  }
+}
+@media only screen and (max-width : 380px){
+  .mCSB_scrollTools{
+    right: 15px;
+  }
+  .forma-for-dicsount{
+    padding: 15px 0px;
+  }
+  .all-reviews ul li .otz-text{
+    padding: 5px;
+    max-width: 320px;
+    p{
+      padding-right: 50px;
+    }
+    .mCSB_inside > .mCSB_container{
+      margin-right: 0;
+      left:0 !important;
+    }
+  }
+
+  .all-reviews ul li .foto-client{
+    width: 320px;
+  }
+}
+
+@media only screen and (max-width : 350px){
+  .forma-x input{
+    margin: 15px 0;
+  }
+  .forma-x button{
+    margin: 15px 0;
+  }
+  .all-reviews ul li{
+    margin: 30px 0;
+    &:nth-child(2n){
+      margin: 30px 0;
+    }
+    &:nth-child(2n+1){
+      margin: 30px 0;
+    }
+  }
+}
+
+
+@media only screen and (max-width : 340px){
+  .mCSB_scrollTools{
+    right: 25px;
+  }
+}
+
+@media only screen and (max-width : 320px){
+  .mCSB_scrollTools{
+    right: 35px;
+  }
 }
