--- a/app/css/header.css
+++ b/app/css/header.css
@@ -124,7 +124,11 @@ header {
     margin: 16px 0;
     position: relative;
     padding-left: 36px; }
-    .banner li:after {
+  .banner p {
+    font-size: 20px;
+    font-family: Museosanscyrl500;
+    color: #e8cda7; }
+    .banner p:after {
       position: absolute;
       content: '';
       left: 0px;
@@ -133,10 +137,6 @@ header {
       background-repeat: no-repeat;
       width: 16px;
       height: 11px; }
-  .banner p {
-    font-size: 20px;
-    font-family: Museosanscyrl500;
-    color: #e8cda7; }
 
 .brends {
   margin-top: 175px; }
