--- a/scss/header.scss
+++ b/scss/header.scss
@@ -2,6 +2,7 @@
 @import "vars.scss";
 @import "../libs/lightslider/dist/css/lightslider.min.css";
 @import "../libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css";
+@import "../libs/magnific-popup/dist/magnific-popup.css";
 
 body{
 	font-size: 16px;
