--- a/scss/main.scss
+++ b/scss/main.scss
@@ -800,6 +800,259 @@ footer{
 }
 
 
+.cart{
+  max-width: 1128px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 30px 19px 11px 30px;
+  border: 1px solid #c0b9af;
+  background-color: #fff;
+  h2{
+    font-size:24px;
+    color: #000222;
+    font-family:Museo-Sans-Cyrl-900;
+    padding-bottom: 30px;
+  }
+  .availability{
+    margin-top: 5px;
+    *{
+      float: left;
+    }
+    a{
+      text-decoration: underline;
+      color: #000222;
+      font-size: 18px;
+    }
+  }
+}
+
+.left-tov-slid{
+  width: 54%;
+  float: left;
+  text-align: center ;
+  .lSSlide{
+    height: 540px !important;
+  }
+  .lSSlideOuter .lSGallery li{
+    text-align: center;
+    border: 1px solid #d6d2cc;
+  }
+  .lSSlide li{
+    text-align: center;
+    border: 1px solid #d6d2cc;
+    height: 540px !important;
+    padding-top: 150px;
+  }
+  .lSGallery {
+    li{
+      height: 152px;
+      padding: 20px 11px;
+    }
+  }
+  .lSAction>a{
+    width: 50px;
+    height: 50px;
+    background-color: #e13151;
+    display: inline-block;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .lSAction>.lSPrev{
+    background-image: url("../img/left-arrow.png");
+    left: 0;
+  }
+  .lSAction>.lSNext{
+    right: 0;
+    background-image: url("../img/right-arrow.png");
+  }
+}
+.right-characteristic{
+  float: left;
+  width: 46%;
+  padding: 0 0 0 50px;
+  input{
+    width: 100%;
+    text-align: center;
+    background-color: #f2f0ee;
+    font-size:18px;
+    color: #7e7e7e;
+    border: 1px solid #dddcda;
+    margin: 5.5px 0;
+    padding: 8px 0;
+    @include placeholder{
+      font-size: 18px;
+      color: #7e7e7e;
+    }
+  }
+  form{
+    margin-top: 30px;
+    text-align: center;
+    button{
+      display: inline-block;
+      width: 203px;
+      border: 1px solid #e13151;
+      color: #e13151;
+      font-size: 20px;
+      background-color: transparent;
+      padding: 8px 0;
+      margin: 15px 0;
+      &:hover{
+        background-color: #e13151;
+        color: #fff;
+      }
+    }
+  }
+}
+
+.conditions{
+  ul{
+    li{
+      margin: 15px 0;
+
+      .img-cond{
+        width: 10%;
+        display: inline-block;
+        vertical-align: middle;
+      }
+      p{
+        display: inline-block;
+        width: 89.1%;
+        vertical-align: middle;
+      }
+    }
+  }
+}
+
+
+.left-cha{
+  float: left;
+  width: 185px;
+  p{
+    font-size: 18px;
+    line-height: 18px;
+    padding: 13px 0;
+    color: #000222;
+    font-family:Museo-Sans-Cyrl-900;
+  }
+}
+.right-cha{
+  float: left;
+  p{
+    font-size: 18px;
+    color: #555555;
+    line-height: 18px;
+    padding: 8.5px 0;
+  }
+  .color{
+    width: 60px;
+    height: 35px;
+    border-radius: 1px;
+    margin: 8.5px 0;
+  }
+  .size{
+    width: 60px;
+    height: 35px;
+    border-radius: 1px;
+    margin: 8.5px 0;
+    background-color: #a66062;
+    text-align: center;
+    padding-top: 4px;
+    i{
+
+      color: #fff;
+      font-size:18px;
+    }
+  }
+}
+
+.quantity{
+  margin-left: -25px;
+  ul{
+    li{
+      display: inline-block;
+      vertical-align: middle;
+      &:first-child{
+        a{
+          background-image: url("../img/left-ar.png");
+        }
+      }
+      &:last-child{
+        a{
+          background-image: url("../img/right-ar.png");
+        }
+      }
+      &:nth-child(2){
+        a{
+          background-color: transparent;
+          width: 62px;
+          height: 37px;
+        }
+      }
+      a{
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 18px;
+        height: 18px;
+        background-color: #ebe7e1;
+        color: #9a9a9a;
+        display: block;
+        text-align: center;
+        font-size: 18px;
+        line-height: 32px;
+        border: 1px solid #dddad5;
+        border-radius: 4px;
+        &:hover{
+          text-decoration: none;
+        }
+      }
+    }
+  }
+}
+
+.right-price{
+  margin-top: 40px;
+  text-align: center;
+  h2{
+    font-size:20px;
+  }
+  .price-list{
+    vertical-align: middle;
+    display: inline-block;
+    margin-top: -25px;
+    margin-left: 25px;
+    h3{
+      width: 180px;
+      height: 89px;
+      display: inline-block;
+      font-size: 30px;
+      color: #000222;
+      font-family:Museo-Sans-Cyrl-900;
+      border: 1px solid #d6d2cc;
+      line-height: 75px;
+      position: relative;
+      &:after{
+        position: absolute;
+        left: 50%;
+        top: -20px;
+        content: '';
+        margin-left: -20px;
+        background-image: url("../img/icon-price.png");
+        background-repeat: no-repeat;
+        width: 41px;
+        height: 41px;
+      }
+    }
+  }
+  tt{
+    padding-top: 5px;
+    color: #e13151;
+    font-size:20px;
+    text-decoration: line-through;
+  }
+}
+
+
 //ALWAYS END
 @import "media.scss";
 @import "sketches.scss";
