--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -205,6 +205,15 @@
 }
 
 
+@media only screen and (max-width : 1117px){
+  .conditions ul li p{
+    width: 88%;
+  }
+}
+
+
+
+
 
 
 @media only screen and (max-width : 1110px){
@@ -335,6 +344,33 @@
         text-align: center;
       }
     }
+  }
+  .cart{
+    padding: 25px;
+    text-align: center;
+    h2{
+      text-align: center;
+    }
+  }
+  .left-tov-slid{
+    width: 100%;
+    float: none;
+  }
+  .right-characteristic{
+    width: 100%;
+    margin-top: 25px;
+    float: none;
+    padding: 0;
+  }
+  .char-r{
+    text-align: left;
+    display: inline-block;
+  }
+  .conditions ul li p{
+    text-align: left;
+  }
+  .conditions ul li .img-cond{
+    width: 5%;
   }
 }
 
@@ -574,6 +610,9 @@
       }
     }
   }
+  .left-tov-slid .lSGallery li{
+    height: auto;
+  }
 }
 
 
@@ -583,6 +622,14 @@
   }
   .arrows-slider{
     top: 52.1%;
+  }
+  .conditions ul li .img-cond{
+    width: 100%;
+    text-align: center;
+  }
+  .conditions ul li p{
+    width: 100%;
+    text-align: center;
   }
 }
 
@@ -615,6 +662,22 @@
     }
   }
 }
+
+@media only screen and (max-width : 394px){
+  .left-cha{
+    width: 150px;
+    p{
+      font-size: 15px;
+    }
+  }
+  .cart{
+    padding: 15px 5px;
+  }
+}
+
+
+
+
 @media only screen and (max-width : 380px){
   .mCSB_scrollTools{
     right: 15px;
@@ -661,6 +724,11 @@
 @media only screen and (max-width : 340px){
   .mCSB_scrollTools{
     right: 25px;
+  }
+  .cart .availability *{
+    float: none !important;
+    display: inline-block;
+    text-align: center;
   }
 }
 
